<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/lesson_detail_scrollview"
    >

    <LinearLayout
        android:id="@+id/lesson_fragment_top_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/activity_vertical_margin"
            >

            <TextView
                android:id="@+id/lesson_detail_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/lesson_detail_header_size"
                android:textStyle="bold"
                android:gravity="center_horizontal"
                android:text="@string/dummy"
                android:textColor= "@color/primary_text"
                android:contentDescription="@string/desc_lesson_detail_name"
                />

            <GridLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primary_text"
                    android:text="@string/desc_lesson_detail_author"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/lesson_detail_author"
                    android:textColor="@color/primary_text"
                    android:textStyle="bold"
                    android:text="@string/dummy"
                    android:contentDescription="@string/desc_lesson_detail_author"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primary_text"
                    android:text="@string/desc_lesson_detail_thala"
                    />

                <TextView
                    android:id="@+id/lesson_detail_thala"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primary_text"
                    android:textStyle="bold"
                    android:text="@string/dummy"
                    android:contentDescription="@string/desc_lesson_detail_thala"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primary_text"
                    android:text="@string/desc_lesson_detail_ragam"
                    android:contentDescription="@string/desc_lesson_detail_ragam"
                    />

                <TextView
                    android:id="@+id/lesson_detail_ragam"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primary_text"
                    android:textStyle="bold"
                    android:text="@string/dummy"
                    android:contentDescription="@string/desc_lesson_detail_ragam"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primary_text"
                    android:text="@string/desc_lesson_detail_melakartha"
                    android:paddingEnd="@dimen/text_margin"
                    />

                <TextView
                    android:id="@+id/lesson_detail_melakartha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primary_text"
                    android:textStyle="bold"
                    android:text="@string/dummy"
                    android:contentDescription="@string/desc_lesson_detail_melakartha"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primary_text"
                    android:text="@string/desc_lesson_detail_arohana"
                    android:paddingEnd="@dimen/text_margin"
                    />

                <TextView
                    android:id="@+id/lesson_detail_arohana"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primary_text"
                    android:textStyle="bold"
                    android:text="@string/dummy"
                    android:contentDescription="@string/desc_lesson_detail_arohana"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primary_text"
                    android:text="@string/desc_lesson_detail_avarohana"
                    android:paddingEnd="@dimen/text_margin"
                    />

                <TextView
                    android:id="@+id/lesson_detail_avarohana"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primary_text"
                    android:textStyle="bold"
                    android:text="@string/dummy"
                    android:contentDescription="@string/desc_lesson_detail_avarohana"
                    />

            </GridLayout>

        </LinearLayout>

        <Button
            android:id="@+id/lesson_detail_resources"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lesson_detail_resources"
            style="@style/Widget.AppCompat.Button.Colored"
            android:contentDescription="@string/desc_lesson_detail_resources"
            />


        <WebView  xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/lesson_detail_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/desc_lesson_detail_description"
            />

    </LinearLayout>

</ScrollView>

